src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Credit_Hold_Reason__c</fullName>
        <description>Reason the account has been categorized as Credit Hold - Do Not Sell</description>
        <inlineHelpText>3rd Party Legal- Sent to an outside agency for final resolution due to non-payment
Bankruptcy- Filed bankruptcy
Credit Risk- High risk &amp; experienced degradation of financial condition
Non-Payment/Delinquent AR- Past due/Hasn&apos;t paid LinkedIn Corporation</inlineHelpText>
        <label>Credit Hold Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Credit_Check_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Legal</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Credit Risk</fullName>
                </value>
                <value>
                    <fullName>Delinquent AR/ Non-Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows products to be sold in non-standard currencies for this account</description>
        <inlineHelpText>Allows products to be sold in non-standard currencies for this account</inlineHelpText>
        <label>Currency Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Pricing_Tier__c</fullName>
        <description>Current year&apos;s Pricing Tier for various currencies</description>
        <label>Current Pricing Tier</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Master_Id__c</fullName>
        <description>Customer Master Id for this account. This is the main Id field which identifies Customer uniquely across LinkedIn.
This Id can be used to cross check data across different systems.</description>
        <externalId>true</externalId>
        <inlineHelpText>Customer Master Id for this account. This is the main Id field which identifies Customer uniquely across LinkedIn.
This Id can be used to cross check data across different systems.</inlineHelpText>
        <label>Customer Master Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Segment__c</fullName>
        <description>LTI Customer Segment for this account based on Linkedin member data.</description>
        <inlineHelpText>LTI Customer Segment for this account based on Linkedin member data.</inlineHelpText>
        <label>LTI Customer Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;1K</fullName>
                </value>
                <value>
                    <fullName>1K - 10K</fullName>
                </value>
                <value>
                    <fullName>10K - 25K</fullName>
                </value>
                <value>
                    <fullName>&gt;25K</fullName>
                </value>
                <value>
                    <fullName>1 - 50 STFF</fullName>
                </value>
                <value>
                    <fullName>51 - 200 STFF</fullName>
                </value>
                <value>
                    <fullName>&gt;200 STFF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_TA_Tools_Budget__c</fullName>
        <description>Field created as a part of case:11780477</description>
        <inlineHelpText>To your knowledge, what is customer’s TA tools budget? Estimation is fine.</inlineHelpText>
        <label>Customer TA Tools Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_Data_Difference__c</fullName>
        <description>If there is an update in the key fields then flag them in the Hoovers Section of the Account.</description>
        <formula>IF(Name !=  DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__BusinessName__c  
      &amp;&amp; NOT(ISBLANK(DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__BusinessName__c)),&apos;Name, &apos;, &apos;&apos;) + 
IF(/*DNBoptimizer__DNB_D_U_N_S_Number__c*/ D_U_N_S__c !=  DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__DUNSNumber__c  
      &amp;&amp; NOT(ISBLANK(DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__DUNSNumber__c)),&apos;D-U-N-S Number, &apos;, &apos;&apos;) + 
IF(Immediate_Parent_DUNS__c !=  DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__ParentDUNSNumber__c 
      &amp;&amp; NOT(ISBLANK(DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__ParentDUNSNumber__c)),&apos;Immediate Parent DUNS#, &apos;, &apos;&apos;) +
IF(Immediate_Parent_Name__c !=  DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__ParentBusinessName__c 
      &amp;&amp; NOT(ISBLANK(DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__ParentBusinessName__c)),&apos;Immediate Parent Name, &apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNB Data Difference?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DNB_D_U_N_S_Number__c</fullName>
        <description>Upon successful match, Optimizer populates this field and references it for future refreshes. The Dun &amp; Bradstreet D-U-N-S® Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</description>
        <inlineHelpText>Upon successful match, Optimizer populates this field and references it for future refreshes. It is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity based on the Data Universal Numbering System (D-U-N-S).</inlineHelpText>
        <label>D&amp;B DUNS Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DnBCompanyRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Upon a successful match, Optimizer populates this field that links the Account record to a specific D-U-N-S Number for display of the correct custom object with D&amp;B data.</description>
        <inlineHelpText>Upon a successful match, Optimizer populates this field that links the Account record to a specific D-U-N-S Number for display of the correct custom object with D&amp;B data.</inlineHelpText>
        <label>AccountToDnB</label>
        <referenceTo>DNBoptimizer__DnBCompanyRecord__c</referenceTo>
        <relationshipLabel>AccountToDnB</relationshipLabel>
        <relationshipName>AccountToDnB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__Number_Of_Opportunity__c</fullName>
        <description>This field calculates the number of linked Opportunities per Account to display on the Data Stewardship Dashboards.</description>
        <inlineHelpText>This field calculates the number of linked Opportunities per Account to display on the Data Stewardship Dashboards.</inlineHelpText>
        <label>Number Of Opportunity</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DWH_Extract_Date__c</fullName>
        <description>Date/Time of latest data extract from SFDC to DWH used to score</description>
        <inlineHelpText>Date/Time of latest data extract from SFDC to DWH used to score</inlineHelpText>
        <label>DWH Extract Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>D_U_N_S_Number__c</fullName>
        <label>D-U-N-S Number - MS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_U_N_S__c</fullName>
        <description>DUNS #</description>
        <inlineHelpText>DUNS #</inlineHelpText>
        <label>D-U-N-S Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Dedicated_Support_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dedicated Support Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DedicatedRep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dedicated_Support_Role_Override__c</fullName>
        <description>Used to override the code that works off of &quot;Dedicated Support Role&quot; in Case object. If CSR is on account team, then this field will be populated, and cases from this account will be assigned to the CSR. If this field is not populated, then cases will route to the Strategic Support on the account team.</description>
        <inlineHelpText>Specifies the team role of the CSR rep who should be the owner of this account&apos;s ES cases.</inlineHelpText>
        <label>Dedicated Support Role Override</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HS_Customer Success</fullName>
                </value>
                <value>
                    <fullName>HS_Omaha_RM_CSR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Designated_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Per: https://na4.salesforce.com/a1W60000000EcFH</description>
        <label>Designated Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Designated Parent)</relationshipLabel>
        <relationshipName>DesignatedAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Director_Type__c</fullName>
        <description>Used to identify accounts affiliated with LinkedIn Board Members. 
- If relationship is DIR/DIR, then, by definition, not a related party. 
- If executives are involved (EXE/DIR), then related party relationship exists.</description>
        <inlineHelpText>Used to identify accounts affiliated with LinkedIn Board Members. 
- If relationship is DIR/DIR, then, by definition, not a related party. 
- If executives are involved (EXE/DIR), then related party relationship exists.</inlineHelpText>
        <label>Director Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DIR/DIR</fullName>
                </value>
                <value>
                    <fullName>EXE/DIR</fullName>
                </value>
                <value>
                    <fullName>DIR/EXE</fullName>
                </value>
                <value>
                    <fullName>EXE/EXE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Sell_LTI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not sell LTI products</description>
        <inlineHelpText>Do not sell LTI products</inlineHelpText>
        <label>Do Not Sell LTI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Sell_Reason__c</fullName>
        <description>Reps cannot sell into this account. #anchorage</description>
        <inlineHelpText>For Credit Hold inquiries, submit an Einstein ticket to the Finance – Credit Check team. 
For any other inquiries, submit an Einstein ticket to the Data Quality team.</inlineHelpText>
        <label>&lt;font color=&quot;#FF0000&quot;&gt;Do Not Sell</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Contact per Company Request</fullName>
                </value>
                <value>
                    <fullName>No Longer in Business</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Unqualified - Duplicate</fullName>
                </value>
                <value>
                    <fullName>Sub-Account</fullName>
                </value>
                <value>
                    <fullName>OFAC</fullName>
                </value>
                <value>
                    <fullName>Legal Request</fullName>
                </value>
                <value>
                    <fullName>Strategic Misalignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doing_Business_As__c</fullName>
        <description>Hoover&apos;s Doing Business As</description>
        <inlineHelpText>Hoover&apos;s Doing Business As</inlineHelpText>
        <label>Doing Business As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dynamics_Id__c</fullName>
        <description>Orbit - Corresponding Account Id from Dynamics System set by Mayflower user.</description>
        <inlineHelpText>Corresponding Account Id from Dynamics System.</inlineHelpText>
        <label>Dynamics Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EA_Active_Contracts__c</fullName>
        <description>Field is used to track which all business units have active EP programs for this Account</description>
        <label>EA Active Contracts</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LTS-EP</fullName>
                </value>
                <value>
                    <fullName>LSS-EP</fullName>
                </value>
                <value>
                    <fullName>LDC-EP</fullName>
                </value>
                <value>
                    <fullName>LMS-EP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EDI_Method__c</fullName>
        <description>contains EDI method does this client prefer (Case 08265088)</description>
        <inlineHelpText>Which EDI method does this client prefer?</inlineHelpText>
        <label>EDI Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual Upload</fullName>
                </value>
                <value>
                    <fullName>HTTPS POST</fullName>
                </value>
                <value>
                    <fullName>SFTP</fullName>
                </value>
                <value>
                    <fullName>SCIM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <description>Non Profit Tax EIN Number - Case # 03107221</description>
        <inlineHelpText>Non Profit Tax EIN Number - Case # 03107221</inlineHelpText>
        <label>EIN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMEA_Multi_Regional_RM__c</fullName>
        <label>EMEA Multi-Regional RM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>NAMER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_SID__c</fullName>
        <label>ERP SID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES_Product_Chat__c</fullName>
        <description>Live Chat Button for ES Product Chat (Internal).</description>
        <formula>HYPERLINK(&quot;/apex/InternalChat?id=&quot; &amp; Id &amp; &quot;&amp;source=Account&quot;,  IMAGE(&quot;http://c.velaro.com/visitor/check.aspx?siteid=10461&amp;showwhen=inqueue&amp;deptid=20197&quot;, &quot;Live Chat Software&quot;), &quot;ProductChat&quot;)</formula>
        <inlineHelpText>Click on Live Chat button for Enterprise Support Product Chat. If the button is not displayed, there is no rep available at the moment.</inlineHelpText>
        <label>ES Product Chat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES_Region__c</fullName>
        <description>Used by Enterprise Support. Returns the Region (East, Central, West) breakdown by Account ShippingState - currently focused on US, but can be extended to other Countries/States/Provinces. If ShippingState is not US or Canada, the formula will return the Geographic Territory value.</description>
        <formula>IF(AND(ISBLANK(ShippingCountry),ISBLANK(ShippingState),ISBLANK(TEXT(Geographic_Territory__c))), 
&apos;&apos;,

IF(AND(ISBLANK(ShippingCountry),ISBLANK(ShippingState),NOT(ISBLANK(TEXT(Geographic_Territory__c)))), 
TEXT(Geographic_Territory__c),

IF(AND(CONTAINS(&apos;UNITED STATES:US:USA:CANADA&apos;,UPPER(ShippingCountry)),ISBLANK(ShippingState)), 
&apos;Central&apos;,

IF(AND(CONTAINS(&apos;UNITED STATES:US:USA:CANADA&apos;,UPPER(ShippingCountry)),CONTAINS(&apos;AL:AR:CT:DC:D.C:D.C.:DE:FL:GA:LA:MA:MD:ME:MS:NC:NH:NJ:NY:PA:RI:SC:VA:VT:WV:ON:NB:NL:NS:PE:QC&apos;, UPPER(ShippingState))), 
&apos;East&apos;,

IF(AND(CONTAINS(&apos;UNITED STATES:US:USA:CANADA&apos;,UPPER(ShippingCountry)),CONTAINS(&apos;IA:IL:IN:KS:KY:MI:MN:MO:MT:ND:NE:OH:OK:SD:TN:TX:WI:WY:MB:NU:SK&apos;, UPPER(ShippingState))), 
&apos;Central&apos;,

IF(AND(CONTAINS(&apos;UNITED STATES:US:USA:CANADA&apos;,UPPER(ShippingCountry)),CONTAINS(&apos;AK:AZ:CA:CO:HI:ID:NM:NV:OR:UT:WA:AB:BC:NT:YT&apos;, UPPER(ShippingState))), 
&apos;West&apos;,

IF(CONTAINS(&apos;UNITED STATES:US:USA:CANADA&apos;,UPPER(ShippingCountry)), 
&apos;Central&apos;,

TEXT(Geographic_Territory__c)
)))))))</formula>
        <inlineHelpText>Used by ES. Returns the Region (East, Central, West) breakdown by Account ShippingState. If ShippingState is not US or Canada, the formula will return the Geographic Territory.</inlineHelpText>
        <label>ES Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Easy_Oppty_Create__c</fullName>
        <description>Launch DealWizard to create new opportunity.</description>
        <formula>IF( 
CONTAINS($Label.DWLMS_ProfileIds, $Profile.Id), 
HYPERLINK(&quot;/apex/LMSDealWizard?accid=&quot;+Id+&quot;&amp;RecType=&quot;+RecordType.Name+IF(INCLUDES(Relationship_Type__c,&quot;Agency - MS&quot;),&quot;&amp;agencycheck=true&quot;,&quot;&quot;), IMAGE(&quot;/resource/EasyDealWizardButton&quot;,&quot;Launch DealWizard to create new opportunity.&quot;)), 
IF( 
CONTAINS($Label.DWLDC_ProfileIds, $Profile.Id), 
HYPERLINK(&quot;/apex/DealWizardApp?accid=&quot;+Id, IMAGE(&quot;/resource/EasyDealWizardButton&quot;,&quot;Launch DealWizard to create new opportunity.&quot;)), 
HYPERLINK(&quot;/apex/DealWizard?accid=&quot;+Id, IMAGE(&quot;/resource/EasyDealWizardButton&quot;,&quot;Launch DealWizard to create new opportunity.&quot;)) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Launch DealWizard to create new opportunity.</inlineHelpText>
        <label>Easy Oppty Create</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;/e&quot;, &quot;Edit&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elevate_Account_Tier__c</fullName>
        <description>This field will give us visibility and enable us to manage the Elevate territory.</description>
        <label>Elevate Account Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Elevate_Temp_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag means that there is a temporary rep managing this account. Before an opportunity can be order complete, it will need to be put in the Original Owner&apos;s MANAGER&apos;s name. Only editable by System Admin. The Temp Coverage AE will have a Role of Elevate_Temp Coverage</description>
        <label>Elevate Temp Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Client__c</fullName>
        <description>This field will be used by the business to identify which Email their customers use in order to upsell and also identify opportunities for expansion of the product features.</description>
        <label>Email Client</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apple Mail</fullName>
                </value>
                <value>
                    <fullName>Google Gmail</fullName>
                </value>
                <value>
                    <fullName>IBM/Lotus Notes</fullName>
                </value>
                <value>
                    <fullName>Microsoft Outlook</fullName>
                </value>
                <value>
                    <fullName>Mozilla Thunderbird</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Holds the email address to be contacted.</description>
        <inlineHelpText>Holds the email address to be contacted.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Engagement_Tool__c</fullName>
        <label>Employee Engagement Tool</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualtrics</fullName>
                </value>
                <value>
                    <fullName>SurveyMonkey</fullName>
                </value>
                <value>
                    <fullName>CultureAmp</fullName>
                </value>
                <value>
                    <fullName>Perceptyx</fullName>
                </value>
                <value>
                    <fullName>Peakon</fullName>
                </value>
                <value>
                    <fullName>CultureIQ</fullName>
                </value>
                <value>
                    <fullName>Hyphen</fullName>
                </value>
                <value>
                    <fullName>Lattice</fullName>
                </value>
                <value>
                    <fullName>Glint</fullName>
                </value>
                <value>
                    <fullName>Consulting Company</fullName>
                </value>
                <value>
                    <fullName>Other Tool</fullName>
                </value>
                <value>
                    <fullName>Does Not Use One</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Profile_Views__c</fullName>
        <description>PMAT</description>
        <inlineHelpText>Members who viewed the profiles of company employees previous month</inlineHelpText>
        <label>Employee Profile Visitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Range__c</fullName>
        <label>Employee Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1-10</fullName>
                </value>
                <value>
                    <fullName>11-50</fullName>
                </value>
                <value>
                    <fullName>51-200</fullName>
                </value>
                <value>
                    <fullName>201-500</fullName>
                </value>
                <value>
                    <fullName>501-1000</fullName>
                </value>
                <value>
                    <fullName>1001-5000</fullName>
                </value>
                <value>
                    <fullName>5001-10000</fullName>
                </value>
                <value>
                    <fullName>10001+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employees_This_Site__c</fullName>
        <description>Used to Hold the &quot;Employees at this Location&quot; from Hoovers.</description>
        <inlineHelpText>Used to Hold the &quot;Employees at this Location&quot; from Hoovers.</inlineHelpText>
        <label>Employees (This Site)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Grade__c</fullName>
        <description>PMAT</description>
        <inlineHelpText>Average engagement grade of all the recruiter seats of a company – 1 Month’s prior (A = highest, F=lowest)</inlineHelpText>
        <label>Last Month’s Engagement Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entitlement_Link__c</fullName>
        <description>Launch Product Entitlement For this Account</description>
        <formula>HYPERLINK(&quot;/apex/ProductEntitlement?id=&quot;+Id,IMAGE(&quot;/resource/EntitlementButton&quot;,&quot;Entitlement&quot;,20,120),&quot;_new&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Launch Product Entitlement For this Account</inlineHelpText>
        <label>Entitlement Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Europe_150__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LinkedIn&apos;s internal index of the top 150 European companies. Index was created and is maintained by Khurram Taji.</description>
        <inlineHelpText>LinkedIn&apos;s internal index of the top 150 European companies. Index was created and is maintained by Khurram Taji.</inlineHelpText>
        <label>Europe 150</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Amplify__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used to identify that account has been excluded from dynamic mapping.</description>
        <label>Excluded from Dynamic Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Nurture_LMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Nurture email opt-out option at account level</description>
        <label>Exclude from Nurture LMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Nurture_LSS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Nurture email opt-out option at account level</description>
        <label>Exclude from Nurture LSS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Nurture_LTS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Nurture email opt-out option at account level</description>
        <label>Exclude from Nurture LTS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_L_D_Vendor__c</fullName>
        <description>Case #08268249</description>
        <label>Existing L&amp;D Vendor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Atomic Learning/Training</fullName>
                </value>
                <value>
                    <fullName>Blackboard</fullName>
                </value>
                <value>
                    <fullName>Careerbuilder</fullName>
                </value>
                <value>
                    <fullName>Catho or Vagas</fullName>
                </value>
                <value>
                    <fullName>CBT Nuggets</fullName>
                </value>
                <value>
                    <fullName>Cornerstone</fullName>
                </value>
                <value>
                    <fullName>Coursera</fullName>
                </value>
                <value>
                    <fullName>CraigsList</fullName>
                </value>
                <value>
                    <fullName>CrossKnowledge</fullName>
                </value>
                <value>
                    <fullName>Dice</fullName>
                </value>
                <value>
                    <fullName>Docebo</fullName>
                </value>
                <value>
                    <fullName>Edcast</fullName>
                </value>
                <value>
                    <fullName>Entelo</fullName>
                </value>
                <value>
                    <fullName>Gale</fullName>
                </value>
                <value>
                    <fullName>GitHub</fullName>
                </value>
                <value>
                    <fullName>Glassdoor</fullName>
                </value>
                <value>
                    <fullName>Grovo</fullName>
                </value>
                <value>
                    <fullName>Harvard ManageMentor</fullName>
                </value>
                <value>
                    <fullName>Hired</fullName>
                </value>
                <value>
                    <fullName>Indeed</fullName>
                </value>
                <value>
                    <fullName>Industry Job Boards</fullName>
                </value>
                <value>
                    <fullName>Jobsite</fullName>
                </value>
                <value>
                    <fullName>Learning Tree</fullName>
                </value>
                <value>
                    <fullName>LinkedIn online solutions</fullName>
                </value>
                <value>
                    <fullName>Litmos</fullName>
                </value>
                <value>
                    <fullName>Monster</fullName>
                </value>
                <value>
                    <fullName>Naukri</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FTSE100__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Share index of the 100 most highly capitalized UK companies listed on the London Stock Exchange.</description>
        <label>FTSE 100</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTSE_100_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field flags a FTSE 100.  This will allow us to roll-up FTSE analysis as necessary.</description>
        <inlineHelpText>This account is a child account of the FTSE 100</inlineHelpText>
        <label>FTSE 100 Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fee_Structure__c</fullName>
        <description>Used to calculate staffing SOP - see case 00797626 - https://na4.salesforce.com/5006000000QBtnS</description>
        <inlineHelpText>Staffing Fee Structure</inlineHelpText>
        <label>Fee Structure</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retained</fullName>
                </value>
                <value>
                    <fullName>Contingent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Campaign_Start_Date__c</fullName>
        <label>First MS Campaign Start Date</label>
        <summarizedField>Opportunity.Campaign_Start_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Probability</field>
            <operation>equals</operation>
            <value>100</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>